--- a/Roglaza/Roglaza.csproj
+++ b/Roglaza/Roglaza.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\AppInfo.cs" />
+    <Compile Include="Classes\CMBX_Item.cs" />
     <Compile Include="Classes\Crypter.cs" />
     <Compile Include="Classes\DBManager.cs" />
     <Compile Include="Classes\HistoryHandler.cs" />
@@ -78,6 +79,12 @@
     <Compile Include="Forms\FrmAccessPanel.Designer.cs">
       <DependentUpon>FrmAccessPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ImagePreviewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ImagePreviewer.Designer.cs">
+      <DependentUpon>ImagePreviewer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\RoglazaHelper.cs" />
@@ -90,6 +97,9 @@
     <EmbeddedResource Include="Forms\FrmAccessPanel.resx">
       <DependentUpon>FrmAccessPanel.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ImagePreviewer.resx">
+      <DependentUpon>ImagePreviewer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
