--- a/Roglaza/Roglaza.csproj
+++ b/Roglaza/Roglaza.csproj
@@ -127,11 +127,11 @@
     <Compile Include="Classes\HistoryHandler.cs" />
     <Compile Include="Classes\Keylogger.cs" />
     <Compile Include="Classes\MessageStrings.cs" />
-    <Compile Include="Forms\Form1.cs">
+    <Compile Include="Forms\FormCamera.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\FormCamera.Designer.cs">
+      <DependentUpon>FormCamera.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FrmAdminPanel.cs">
       <SubType>Form</SubType>
@@ -156,8 +156,8 @@
     <Compile Include="Classes\RoglazaHelper.cs" />
     <Compile Include="Classes\RoglazaSettings.cs" />
     <Compile Include="Classes\RoglazaInstaller.cs" />
-    <EmbeddedResource Include="Forms\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\FormCamera.resx">
+      <DependentUpon>FormCamera.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmAdminPanel.resx">
       <DependentUpon>FrmAdminPanel.cs</DependentUpon>
